navbar collapse breakpoint correction

--- a/assets/CSS/browse.css
+++ b/assets/CSS/browse.css
@@ -2,7 +2,7 @@
     float: left; width: 20%; margin-right: 1%;
 }
 
-.info { display: inline-block; margin-right: 10px; color: #777; }
+.info { display: inline-block; color: #777; }
 .info span { font-weight: bold; }
 @media (max-width: 700x){
     .col-2-hidden-xs{
